# WISE_Weather_Module

./: CMakeLists.txt  README.md
cpp/: .gitignore  CWFGM_WeatherGrid.cpp  CWFGM_WeatherGridFilter.Serialize.cpp  CWFGM_WeatherGridFilter.cpp  CWFGM_WeatherStation.Serialize.cpp  CWFGM_WeatherStation.cpp  CWFGM_WeatherStream.Serialize.cpp  CWFGM_WeatherStream.cpp  CWFGM_WindDirectionGrid.Serialize.cpp  CWFGM_WindDirectionGrid.cpp  CWFGM_WindSpeedGrid.Serialize.cpp  CWFGM_WindSpeedGrid.cpp  DailyWeather.cpp  DayCondition.cpp  WeatherCache.cpp  WeatherStream.cpp  WeatherUtilities.cpp
include/: CWFGM_WeatherGrid.h  CWFGM_WeatherGridFilter.h  CWFGM_WeatherStation.h  CWFGM_WeatherStream.h  CWFGM_WindDirectionGrid.h  CWFGM_WindSpeedGrid.h  DailyCondition.h  DailyWeather.h  DayCondition.h  WeatherCOM.h  WeatherCom_ext.h  WeatherCondition.h  WeatherStream.h  WeatherUtilities.h  WindGrid.h
java/: .project  pom.xml  pom.xml.in
java/src/main/java/ca/wise/weather/: CWFGM_WeatherStation.java  CWFGM_WeatherStream.java  DAILYCONDITION_SPECIFIED.java  DailyCondition.java  DailyWeather.java  NoonWeather.java  NoonWeatherCondition.java  WEATHERSTREAM_IMPORT.java  WEATHER_OPTION.java  WeatherCondition.java
java/src/main/java/ca/wise/weather/interp/: Interpolator.java
java/src/main/java/ca/wise/weather/proto/: CwfgmWeatherStation.java  CwfgmWeatherStationOrBuilder.java  CwfgmWeatherStationOuterClass.java  CwfgmWeatherStream.java  CwfgmWeatherStreamOrBuilder.java  CwfgmWeatherStreamOuterClass.java  DailyConditions.java  DailyConditionsOrBuilder.java  DailyConditionsOuterClass.java  DailyFwi.java  DailyFwiOrBuilder.java  WeatherGridFilter.java  WeatherGridFilterOrBuilder.java  WeatherGridFilterOuterClass.java  WeatherStream.java  WeatherStreamOrBuilder.java  WeatherStreamOuterClass.java  WindGrid.java  WindGridOrBuilder.java  WindGridOuterClass.java
proto/: cwfgmWeatherStation.proto  cwfgmWeatherStream.proto  dailyConditions.proto  weatherGridFilter.proto  weatherStream.proto  windGrid.proto
